# koruma

./: .gitattributes  .gitignore  .typos.toml  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  justfile
crates/koruma/: Cargo.toml  README.md
crates/koruma-collection/: Cargo.toml  README.md  i18n.toml
crates/koruma-collection/docs/: ARCHITECTURE.md
crates/koruma-collection/i18n/en/: koruma-collection.ftl
crates/koruma-collection/i18n/fr/: koruma-collection.ftl
crates/koruma-collection/i18n/zh-CN/: koruma-collection.ftl
crates/koruma-collection/src/: i18n.rs  len.rs  lib.rs
crates/koruma-collection/src/tui/: app.rs  i18n.rs  mod.rs
crates/koruma-collection/src/validators/: alphanumeric.rs  ascii.rs  contains.rs  credit_card.rs  email.rs  ip.rs  matches.rs  mod.rs  pattern.rs  phone_number.rs  prefix.rs  range.rs  required.rs  suffix.rs  url.rs
crates/koruma-collection/src/validators/collection/: len.rs  mod.rs  non_empty.rs
crates/koruma-collection/src/validators/format/: credit_card.rs  email.rs  ip.rs  mod.rs  phone_number.rs  url.rs
crates/koruma-collection/src/validators/general/: mod.rs  required.rs
crates/koruma-collection/src/validators/numeric/: mod.rs  negative.rs  non_negative.rs  non_positive.rs  positive.rs  range.rs
crates/koruma-collection/src/validators/string/: alphanumeric.rs  ascii.rs  case.rs  contains.rs  matches.rs  mod.rs  pattern.rs  prefix.rs  suffix.rs
crates/koruma-core/: Cargo.toml  README.md
crates/koruma-core/docs/: ARCHITECTURE.md
crates/koruma-core/src/: lib.rs
crates/koruma-core/tests/: builder_with_value_tests.rs  validate_trait_tests.rs  validation_error_tests.rs
crates/koruma-derive/: Cargo.toml  README.md
crates/koruma-derive-core/: Cargo.toml  README.md
crates/koruma-derive-core/docs/: ARCHITECTURE.md
crates/koruma-derive-core/src/: lib.rs  parse.rs  utils.rs
crates/koruma-derive-core/src/tests/: mod.rs  parse_field_tests.rs
crates/koruma-derive-core/src/tests/snapshots/: koruma_derive_core__tests__parse_field_tests__find_value_field_cfg_attr_complex_condition.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_any_condition.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_each.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_generic_validator.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_multiple_validators.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_nested.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_newtype.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_single_validator.snap  koruma_derive_core__tests__parse_field_tests__parse_field_cfg_attr_with_other_derives.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_each.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_generic_validator.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_multiple_validators.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_nested.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_newtype.snap  koruma_derive_core__tests__parse_field_tests__parse_field_direct_skip.snap  koruma_derive_core__tests__parse_field_tests__parse_field_mixed_attrs_only_koruma_parsed.snap  koruma_derive_core__tests__parse_field_tests__parse_field_unnamed.snap  koruma_derive_core__tests__parse_field_tests__parse_struct_options_cfg_attr_both.snap  koruma_derive_core__tests__parse_field_tests__parse_struct_options_cfg_attr_newtype.snap  koruma_derive_core__tests__parse_field_tests__parse_struct_options_direct.snap
crates/koruma-derive/docs/: ARCHITECTURE.md
crates/koruma-derive/src/: expand.rs  lib.rs
crates/koruma-derive/src/expand/: attr_parsing_tests.rs  codegen.rs  derive.rs  display.rs  error_tests.rs  fluent.rs  helper_tests.rs  mod.rs  parse.rs  snapshot_tests.rs  utils.rs  validator.rs
crates/koruma-derive/src/expand/snapshots/: koruma_derive__expand__snapshot_tests__koruma_expansion_each.snap  (+13 more)
crates/koruma-derive/src/snapshots/: koruma_derive__expand__tests__koruma_expansion_each.snap  koruma_derive__expand__tests__koruma_expansion_each_multiple_validators.snap  koruma_derive__expand__tests__koruma_expansion_generic_validator.snap  koruma_derive__expand__tests__koruma_expansion_mixed_fields.snap  koruma_derive__expand__tests__koruma_expansion_multiple_fields.snap  koruma_derive__expand__tests__koruma_expansion_multiple_validators.snap  koruma_derive__expand__tests__koruma_expansion_optional_field.snap  koruma_derive__expand__tests__koruma_expansion_optional_with_generic.snap  koruma_derive__expand__tests__koruma_expansion_single_validator.snap  koruma_derive__expand__tests__koruma_expansion_validator_no_args.snap  koruma_derive__expand__tests__validator_expansion_generic.snap  koruma_derive__expand__tests__validator_expansion_non_option_value.snap  koruma_derive__expand__tests__validator_expansion_simple.snap
crates/koruma-derive/src/tests/: attr_parsing_tests.rs  error_tests.rs  helper_tests.rs  mod.rs  snapshot_tests.rs
crates/koruma/docs/: ARCHITECTURE.md
crates/koruma/src/: lib.rs
crates/koruma/tests/: integration.rs
crates/koruma/tests/integration/: fixtures.rs  tests.rs  validators.rs
example/: Cargo.toml
example/i18n/en/: koruma-example.ftl  koruma.ftl
example/i18n/zh-CN/: koruma-example.ftl
example/src/: lib.rs  main.rs
example/src/validators/: normal.rs
examples/collection/: Cargo.toml  README.md
examples/collection/src/: lib.rs  main.rs
examples/collection/src/tui/: app.rs  i18n.rs  mod.rs
examples/custom/: Cargo.toml
examples/custom/i18n/fr/: koruma-example.ftl
examples/custom/src/: i18n.rs  lib.rs  main.rs
examples/custom/src/validators/: fluent.rs  mod.rs  normal.rs
examples/shared-lib/: Cargo.toml
examples/shared-lib/src/: i18n.rs  lib.rs
examples/user-defined/: Cargo.toml  i18n.toml
examples/user-defined/src/: lib.rs  main.rs
examples/user-defined/src/validators/: fluent.rs
(+36 files in other folders)
