[workspace]
default-members = [ "examples/custom", "examples/collection" ]
members = [ "crates/koruma", "crates/koruma-collection", "crates/koruma-core", "crates/koruma-derive", "examples/collection", "examples/custom" ]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/koruma"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
bon = "3.8.1"
derive-getters = "0.5.0"
es-fluent = { git = "https://github.com/stayhydated/es-fluent.git", branch = "fluent-value" }
es-fluent-lang = { git = "https://github.com/stayhydated/es-fluent.git", branch = "fluent-value" }
es-fluent-manager-embedded = { git = "https://github.com/stayhydated/es-fluent.git", branch = "fluent-value" }
heck = "0.5.0"
insta = "1.45.1"
koruma = { path = "crates/koruma", version = "0.1.0" }
koruma-collection = { path = "crates/koruma-collection", version = "0.1.0" }
koruma-core = { path = "crates/koruma-core", version = "0.1.0" }
koruma-derive = { path = "crates/koruma-derive", version = "0.1.0" }
paste = "1.0"
prettyplease = "0.2"
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
rust-embed = "8.5.0"
strum = "0.27.2"
syn = "2"
unic-langid = "0.9.6"
card-validate = "2.3"
idna = "1"
phonenumber = "0.3.7"
regex = "1"
rust_decimal = "1"
url = "2"
