[workspace]
default-members = [ "examples/collection" ]
members = [
  "crates/koruma",
  "crates/koruma-collection",
  "crates/koruma-core",
  "crates/koruma-derive",
  "examples/collection",
  "examples/user-defined",
  "examples/shared-lib",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT OR Apache-2.0"
publish = true
readme = "README.md"
repository = "https://github.com/stayhydated/koruma"
rust-version = "1.88"
version = "0.2.0"

[workspace.dependencies]
bon = "3.8.2"
card-validate = "2.4"
crossterm = "0.29"
derive-getters = "0.5.0"
es-fluent = "0.5.2"
es-fluent-lang = "0.5.2"
es-fluent-manager-embedded = "0.5.2"
heck = "0.5.0"
idna = "1"
insta = "1.46.0"
inventory = "0.3.21"
koruma = { path = "crates/koruma", version = "0.2.0" }
koruma-collection = { path = "crates/koruma-collection", version = "0.2.0" }
koruma-core = { path = "crates/koruma-core", version = "0.2.0" }
koruma-derive = { path = "crates/koruma-derive", version = "0.2.0" }
paste = "1.0"
phonenumber = "0.3.7"
prettyplease = "0.2"
proc-macro-error2 = "2"
proc-macro2 = "1"
quote = "1"
ratatui = "0.30"
regex = "1"
rust-embed = "8.9.0"
rust_decimal = "1"
smallvec = "1.15.1"
strum = "0.27.2"
syn = "2"
tui-input = "0.15"
unic-langid = "0.9.6"
url = "2"
