[package]
name = "koruma-example"
version = "0.1.0"
edition = "2024"

[dependencies]
bon = { workspace = true }
es-fluent = { features = [ "derive", "generate" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
koruma = { workspace = true }
rust-embed = { workspace = true }
unic-langid = { workspace = true }
strum = { workspace = true, features = ["derive"] }
