[package]
name = "koruma-collection"
description = """
A collection of common validators using koruma.
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
card-validate = { optional = true, workspace = true }
es-fluent = { features = [ "derive" ], optional = true, workspace = true }
es-fluent-manager-embedded = { optional = true, workspace = true }
idna = { optional = true, workspace = true }
inventory = { optional = true, workspace = true }
koruma = { workspace = true }
phonenumber = { optional = true, workspace = true }
regex = { optional = true, workspace = true }
rust-embed = { optional = true, workspace = true }
rust_decimal = { optional = true, workspace = true }
unic-langid = { optional = true, workspace = true }
url = { optional = true, workspace = true }
smallvec = { optional = true, workspace = true }
heck = { optional = true, workspace = true }

[features]
default = [ "fmt" ]
full = [
  "heck",
  "fmt",
  "url",
  "credit-card",
  "phone-number",
  "email",
  "email-idna",
  "rust_decimal",
  "regex",
  "smallvec",
]
full-fluent = [ "full", "fluent" ]
fluent = [
  "koruma/fluent",
  "dep:es-fluent",
  "dep:es-fluent-manager-embedded",
  "dep:unic-langid",
  "dep:rust-embed",
]
showcase = [ "full", "koruma/showcase" ]
credit-card = [ "dep:card-validate" ]
email = [ "dep:regex" ]
email-idna = [ "dep:idna" ]
smallvec = [ "dep:smallvec" ]
fmt = [  ]
heck = [ "dep:heck" ]
phone-number = [ "dep:phonenumber" ]
regex = [ "dep:regex" ]
rust_decimal = [ "dep:rust_decimal" ]
url = [ "dep:url" ]

[package.metadata.docs.rs]
features = [
  "default",
  "full",
  "full-fluent",
  "fluent",
  "credit-card",
  "email",
  "email-idna",
  "smallvec",
  "fmt",
  "heck",
  "phone-number",
  "regex",
  "rust_decimal",
  "url",
]
