[package]
name = "koruma-core"
description = """
Core traits and types for koruma validation
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true

[features]
default = []
showcase = ["dep:inventory"]

[dependencies]
inventory = { workspace = true, optional = true }

[package.metadata.docs.rs]
all-features = true
