[package]
name = "koruma-derive"
description = """
Derive crate for koruma
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme.workspace = true

[features]
fn-macro-helper = [  ]
fluent = [  ]

[lib]
proc-macro = true

[dependencies]
heck = { workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "extra-traits" ], workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }

[package.metadata.docs.rs]
all-features = true
