[package]
name = "koruma-derive"
description = """
Derive crate for koruma
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[features]
fluent = [  ]
showcase = [ "dep:inventory", "koruma-derive-core/showcase" ]

[lib]
proc-macro = true

[dependencies]
inventory = { optional = true, workspace = true }
heck = { workspace = true }
koruma-derive-core = { features = [  ], workspace = true }
proc-macro-error2 = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { features = [ "full", "extra-traits" ], workspace = true }

[dev-dependencies]
insta = { workspace = true }
prettyplease = { workspace = true }

[package.metadata.docs.rs]
features = [ "fluent" ]
