[package]
name = "koruma"
description = """
The koruma crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
koruma-core = { workspace = true }
koruma-derive = { optional = true, workspace = true }
es-fluent = { optional = true, workspace = true }

[features]
default = [ "derive", "fn-macro-helper" ]
derive = [ "dep:koruma-derive" ]
fluent = [ "dep:es-fluent" ]
fn-macro-helper = [ "koruma-derive/fn-macro-helper" ]

[package.metadata.docs.rs]
all-features = true
