[package]
name = "koruma"
description = """
The koruma crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
koruma-core = { workspace = true }
koruma-derive = { optional = true, workspace = true }
es-fluent = { optional = true, workspace = true }

[features]
default = [ "derive" ]
derive = [ "dep:koruma-derive" ]
fluent = [ "dep:es-fluent", "koruma-derive?/fluent" ]

[package.metadata.docs.rs]
all-features = true
