[package]
name = "koruma"
description = """
The koruma crate
"""
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
readme = "README.md"

[dependencies]
bon = { workspace = true }
inventory = { optional = true, workspace = true }
koruma-core = { workspace = true }
koruma-derive = { optional = true, workspace = true }

[features]
default = [ "derive" ]
derive = [ "dep:koruma-derive" ]
fluent = [ "koruma-derive?/fluent" ]
showcase = [ "dep:inventory", "koruma-core/showcase", "koruma-derive?/showcase" ]

[package.metadata.docs.rs]
features = [ "derive", "fluent" ]
