[package]
name = "koruma-collection-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
crossterm = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
koruma = { features = [ "showcase" ], workspace = true }
koruma-collection = { features = [ "showcase", "fluent", "fmt" ], workspace = true }
koruma-shared-lib = { path = "../shared-lib" }
ratatui = { workspace = true }
rust-embed = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
tui-input = { workspace = true }
unic-langid = { workspace = true }
