[package]
name = "shared-lib"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
es-fluent = { features = [ "derive", "generate" ], workspace = true }
es-fluent-lang = { workspace = true }
es-fluent-manager-embedded = { workspace = true }
rust-embed = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
unic-langid = { workspace = true }
