[package]
name = "koruma-user-defined-example"
version.workspace = true
rust-version.workspace = true
edition.workspace = true
license = "Unlicense"
publish = false

[dependencies]
bon = { workspace = true }
es-fluent = { features = [ "derive" ], workspace = true }
es-fluent-manager-embedded = { workspace = true }
koruma = { features = [ "derive" ], workspace = true }
koruma-shared-lib = { path = "../shared-lib" }
rust-embed = { workspace = true }
strum = { features = [ "derive" ], workspace = true }
unic-langid = { workspace = true }
